# gw-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  plugin.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: quality.md  release.md  self-review.md  test.md
.claude/rules/: development-workflow.md  python.md  versioning.md
.github/workflows/: ci.yml  publish.yml
commands/: gw-auth.md  gw-calendar.md  gw-drive.md  gw-loop.md  gw-mail.md  gw-setup.md  gw-workflow.md
src/gw/: auth.py  calendar.py  cli.py  config.py  drive.py  gmail.py  output.py
tests/: conftest.py  test_auth.py  test_auth_service.py  test_bugfixes.py  test_calendar.py  test_cli.py  test_cli_config.py  test_config.py  test_coverage.py  test_drive.py  test_gmail.py  test_output.py
