[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gw-cli"
version = "0.1.0"
description = "Google Workspace CLI for Claude Code — Calendar, Gmail, Drive with multi-account OAuth support"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
keywords = ["google-workspace", "gmail", "calendar", "google-drive", "cli", "claude-code", "oauth2", "multi-account"]
authors = [
    {name = "Fumikazu Kiyota", email = "fumikazu.kiyota@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business :: Scheduling",
]

[project.urls]
Homepage = "https://github.com/JFK/gw-cli"
Repository = "https://github.com/JFK/gw-cli"
Issues = "https://github.com/JFK/gw-cli/issues"
dependencies = [
    "click>=8.3",
    "google-auth>=2.49",
    "google-auth-oauthlib>=1.3",
    "google-api-python-client>=2.194",
    "rich>=15.0",
]

[project.scripts]
gw = "gw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
